salesforce/generated/TNS_ingest_api/objects/TNS_ProductFamily__dll/fields/business_unit__c.field-meta.xml
<CustomField>
    <fullName>business_unit__c</fullName>
    <label>business_unit</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>business_unit</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>