salesforce/generated/TNS_ingest_api/objects/TNS_ProductFamily__dll/fields/core_market__c.field-meta.xml
<CustomField>
    <fullName>core_market__c</fullName>
    <label>core_market</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>core_market</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>