salesforce/generated/TNS_ingest_api/objects/TNS_ProductFamily__dll/fields/KQ_product_family_id__c.field-meta.xml
<CustomField>
    <fullName>KQ_product_family_id__c</fullName>
    <label>KQ_product_family_id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_product_family_id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>