salesforce/generated/TNS_ingest_api/objects/TNS_ProductFamily__dll/fields/product_family_id__c.field-meta.xml
<CustomField>
    <fullName>product_family_id__c</fullName>
    <label>product_family_id</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>product_family_id</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <primaryIndexOrder>1</primaryIndexOrder>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>