salesforce/generated/TNS_ingest_api/objects/TNS_ProductFamily__dll/fields/vp_of_product__c.field-meta.xml
<CustomField>
    <fullName>vp_of_product__c</fullName>
    <label>vp_of_product</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>vp_of_product</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>